--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "json-server-auth --watch db.json --port 3000"
+    "server": "json-server-auth --watch db.json"
   },
   "private": true,
   "dependencies": {
